fix sidebar header weird behavior when collapsing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,11 +64,11 @@
   --chart-3: oklch(0.448 0.0747 59.6);
   --chart-4: oklch(0.5756 0.166573 44.3021);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar:  oklch(0.21 0.006 285.885);
+  --sidebar:  oklch(0.2046 0 0);
   --sidebar-foreground:  oklch(0.985 0 0);
   --sidebar-primary:  oklch(0.795 0.184 86.047);
   --sidebar-primary-foreground:  oklch(0.987 0.026 102.212);
-  --sidebar-accent:  oklch(0.274 0.006 286.033);
+  --sidebar-accent:  oklch(0.2046 0 0);
   --sidebar-accent-foreground:  oklch(0.985 0 0);
   --sidebar-border:  oklch(1 0 0 / 10%);
   --sidebar-ring:  oklch(0.421 0.095 57.708);
